Fix accordion headers logic, link document config to correct DB path, remove avatar border

--- a/Frontend/public/assets/components/header.html
+++ b/Frontend/public/assets/components/header.html
@@ -1,4 +1,3 @@
 <header class="titanium-header">
-    <!-- Contenitore Puro: Il contenuto viene iniettato dalla singola pagina -->
-    <div id="header-content" class="w-full flex items-center justify-between"></div>
+    <div id="header-content"></div>
 </header>
